--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>BracketDraft</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
+
+
   </head>
   <body>
     <h1>Working</h1>
-    <div id="content"></div>
-    <script type="text/babel" src="scripts/main.js"></script>
+    <section id="content"></section>
+    <script src="build.js"></script>
   </body>
 </html>
