--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <h1>Working</h1>
+    <h1>BracketDraft</h1>
     <section id="content"></section>
     <script src="build.js"></script>
   </body>
