sockets in leagueFunctions

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>BracketDraft</title>
     <link rel="stylesheet" type="text/css" href="main.min.css" />
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+      // var socket = io.connect(location.origin, {transports: ['websocket']});
+    </script>
 
 
   </head>
