--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>BracketDraft</title>
     <link rel="stylesheet" type="text/css" href="main.min.css" />
-    <script src="/socket.io/socket.io.js"></script>
+    <script type='text/javascript' src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
       // var socket = io.connect(location.origin, {transports: ['websocket']});
@@ -15,6 +15,6 @@
   <body>
     <h1>BracketDraft</h1>
     <section id="content"></section>
-    <script src="build.js"></script>
+    <script type='text/javascript' src="build.js"></script>
   </body>
 </html>
