--- a/client/index.html
+++ b/client/index.html
@@ -16,5 +16,7 @@
     <h1>BracketDraft</h1>
     <section id="content"></section>
     <script type='text/javascript' src="build.js"></script>
+    <script>
+    </script>
   </body>
 </html>
