--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,8 @@
   <body>
     <h1>BracketDraft</h1>
     <section id="content"></section>
-    <script type='text/javascript' src="build.js"></script>
+    <!-- // <script src="http://localhost:8080/build.js"></script> -->
+    <script type='text/javascript' src="./build/build.js"></script>
     <script>
     </script>
   </body>
