--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <title>BracketDraft</title>
     <script type='text/javascript' src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
+      var socket = io({"force new connection": true});
       // var socket = io.connect(location.origin, {transports: ['websocket']});
     </script>
 
